--- a/.github/workflows/manual.yml
+++ b/.github/workflows/manual.yml
@@ -5,7 +5,7 @@ name: Subtree Push
 # Controls when the action will run. Workflow runs when manually triggered using the UI
 # or API.
 on:
-  pull_requests:
+  pull_request:
     types:
       - closed
     branches:
