--- a/.github/workflows/manual.yml
+++ b/.github/workflows/manual.yml
@@ -18,9 +18,10 @@ jobs:
     runs-on: ubuntu-latest
     steps:
     # Runs a single command using the runners shell
-    - name: Echo
+    - name: Echo and change directory
       run: |
         echo "This PR will be merged"
+        cd ${GITHUB_WORKSPACE}
     - name: Push Subtree
       run: |
         git subtree push --prefix=${GITHUB_WORKSPACE}/ir https://github.com/dongmin-ra/subtree_test_slave.git main
