--- a/.github/workflows/manual.yml
+++ b/.github/workflows/manual.yml
@@ -26,6 +26,14 @@ jobs:
         ls -al
         cd ${GITHUB_WORKSPACE}
         ls -al
+    - name: git config
+      run: |
+        cp .git/config .git/config-original
+        git config --global url."https://api:${{ secrets.ACTION_TOKEN }}@github.com/".insteadOf "https://github.com/"
+        git config --unset http."https://github.com/".extraheader
     - name: Push Subtree
       run: |
         git subtree push --prefix=lib https://github.com/dongmin-ra/subtree_test_slave.git main
+    - name: git config back
+      run: |
+        cp -f .git/config-original .git/config
