--- a/.github/workflows/manual.yml
+++ b/.github/workflows/manual.yml
@@ -23,7 +23,7 @@ jobs:
     - name: Subtree Push
       uses: nxtlvlsoftware/git-subtree-action@1.1
       with:
-        repo: 'https://github.com/dongmin-ra/subtree_test_slave.git'
+        repo: 'dongmin-ra/subtree_test_slave'
         path: 'lib'
         deploy_key: ${{ secrets.ACTION_TOKEN }}
         tag: false
