--- a/.github/workflows/manual.yml
+++ b/.github/workflows/manual.yml
@@ -21,11 +21,10 @@ jobs:
     - name: Checkout Repository
       uses: actions/checkout@v2 
     - name: Subtree Push
-      uses: nxtlvlsoftware/git-subtree-action@1.1
+      uses: karlludwigweise/git-subtree@v1
       with:
-        repo: 'dongmin-ra/subtree_test_slave'
-        path: 'lib'
-        deploy_key: ${{ secrets.ACTION_TOKEN }}
-        tag: false
-        branch: main
-        force: true
+        pat: ${{ secrets.ACTION_TOKEN }}
+        repo: https://github.com/dongmin-ra/subtree_test_slave.git
+        action: push
+        prefix: lib
+        message: Hello
