--- a/.github/workflows/manual.yml
+++ b/.github/workflows/manual.yml
@@ -20,10 +20,20 @@ jobs:
     # Runs a single command using the runners shell
     - name: Checkout Repository
       uses: actions/checkout@v2 
-    - name: Subtree Push
-      uses: karlludwigweise/git-subtree@v1
-      with:
-        pat: ${{ secrets.ACTION_TOKEN }}
-        repo: https://github.com/dongmin-ra/subtree_test_slave.git
-        action: push
-        prefix: lib
+    - name: Echo and change directory
+      run: |
+        echo "This PR will be merged"
+        ls -al
+        cd ${GITHUB_WORKSPACE}
+        ls -al
+    - name: git config
+      run: |
+        cp .git/config .git/config-original
+        git config --global url.https://api:${{ secrets.ACTION_TOKEN }}@github.com/.insteadOf https://github.com/
+        git config --unset http.https://github.com/.extraheader
+    - name: Push Subtree
+      run: |
+        git subtree push --prefix=lib https://github.com/dongmin-ra/subtree_test_slave.git main
+    - name: git config back
+      run: |
+        cp -f .git/config-original .git/config
