--- a/.github/workflows/manual.yml
+++ b/.github/workflows/manual.yml
@@ -25,6 +25,6 @@ jobs:
       with:
         github_token: ${{ secrets.ACTION_TOKEN }}
         action: 'push'
-        repo: 'dongmin-ra/subtree_test_slave'
+        repo: 'https://github.com/dongmin-ra/subtree_test_slave.git' 
         position: 'main'
         prefix: 'lib'
