--- a/.github/workflows/manual.yml
+++ b/.github/workflows/manual.yml
@@ -4,31 +4,62 @@ name: Subtree Push
 
 # Controls when the action will run. Workflow runs when manually triggered using the UI
 # or API.
-#on:
-#  pull_request:
-#    types:
-#      - closed
-#    branches:
-#      - main
-
 on:
-  push:
+  pull_request:
+    types:
+      - closed
     branches:
       - main
 
 # A workflow run is made up of one or more jobs that can run sequentially or in parallel
 jobs:
   subtree-push:
-    #if: github.event.pull_request.merged == true
+    if: github.event.pull_request.merged == true
     runs-on: ubuntu-latest
     steps:
     # Runs a single command using the runners shell
     - name: Checkout Repository
       uses: actions/checkout@v2 
-    - name: subtree sync
-      uses: nxtlvlsoftware/git-subtree-action@1.1
-      with:
-        repo: 'dongmin-ra/subtree_test_slave'
-        path: 'lib'
-        deploy_key: ${{ secrets.ACTION_TOKEN }}
-        force: true
+    - name: Remove github cache
+      run: |
+        rm -rf /github/workspace/.git/subtree-cache
+    - name: show git version
+      run: |
+        git version
+        ls -al
+    - name: Git Config
+      run: |
+        cp .git/config .git/config-original
+        git config --global user.email "test@test.com"
+        git config --global user.name "test_bot"
+        git config --global url.https://api:${{ secrets.ACTION_TOKEN }}@github.com/.insteadOf https://github.com/
+        git config --unset-all http.https://github.com/.extraheader
+    - name: Subtree add remote
+      run: |
+        git remote add subtree https://github.com/dongmin-ra/subtree_test_slave.git
+    - name: Subtree remote check
+      run: |
+        git remote -v
+    - name: Subtree Fetch
+      run: |
+        git fetch subtree 
+    - name: Subtree Pull
+      run: |
+        git subtree pull --prefix lib subtree main
+
+        #- name: Subtree Push
+        # run: |
+        # git subtree push --prefix=lib subtree main
+        # env:
+        # GITHUB_TOKEN: ${{ secrets.ACTION_TOKEN }}
+        # - name: Push
+        # run: |
+        # echo "test bot" >> README.md
+        # git add README.md
+        # git commit -m "add by test bot"
+        # git push origin main
+        # env:
+        # GITHUB_TOKEN: ${{ secrets.ACTION_TOKEN }}
+    - name: Git Config backup
+      run: |
+        cp -f .git/config-original .git/config
