--- a/.github/workflows/manual.yml
+++ b/.github/workflows/manual.yml
@@ -34,20 +34,14 @@ jobs:
     - name: Subtree add remote
       run: |
         git remote add subtree https://github.com/dongmin-ra/subtree_test_slave.git
-    - name: Git clone master and subtree push
-      run: | 
-        git clone https://github.com/dongmin-ra/subtree_test_master.git
-        cd subtree_test_master
+    - name: Subtree push
+      run: |
         git subtree push --prefix lib https://github.com/dongmin-ra/subtree_test_slave.git main
-        #- name: Git clone subtree
-        #run: |
-        #git clone https://github.com/dongmin-ra/subtree_test_slave.git
-        #cd subtree_test_slave
-        #ls -al
-        #echo "test bot" >> README.md
-        #git add README.md
-        #git commit -m "add by test bot"
-        #git push origin main
+        #- name: Git clone master and subtree push
+        #run: | 
+        #git clone https://github.com/dongmin-ra/subtree_test_master.git
+        #cd subtree_test_master
+        #git subtree push --prefix lib https://github.com/dongmin-ra/subtree_test_slave.git main
     - name: Git Config backup
       run: |
         #cp -f .git/config-original .git/config
