--- a/.github/workflows/manual.yml
+++ b/.github/workflows/manual.yml
@@ -22,6 +22,7 @@ jobs:
       uses: actions/checkout@v4 
       with:
         token: ${{ secrets.ACTION_TOKEN }}
+        fetch-depth: 0
     - name: show git info
       run: |
         git version
